fix navigaation and message modal not showing properly on ios

--- a/scss/sp/_common.scss
+++ b/scss/sp/_common.scss
@@ -132,28 +132,26 @@ header {
       visibility: hidden;
       transition: .3s ease;
       position: fixed;
-      inset: 0;
+      top: 0;
+      left: 0;
       z-index: 1000;
       width: 100%;
       height: 100vh;
+      background-color: #000000;
       &--overlay{
-        position: absolute;
-        inset: 0;
-        z-index: 1;
-        background-color: #000000;
+        display: none;
       }
       &--list{
         position: absolute;
-        top: 50%;
+        top: 0;
         left: 0;
-        transform: translate(0, -50%);
         z-index: 2;
         width: 100%;
         height: 100%;
         transition: .3s ease;
         overflow: auto;
         -webkit-overflow-scrolling: touch; 
-        padding: 70px 0 50px;
+        padding: 70px 0 100px;
       }
       &--item{
         &:first-child{
