--- a/scss/sp/_message.scss
+++ b/scss/sp/_message.scss
@@ -18,13 +18,15 @@
       }
       .modal{
         position: fixed;
-        inset: 0;
+        top: 0;
+        left: 0;
         z-index: 1002;
         width: 100%;
         height: 100vh;
         opacity: 0;
         visibility: hidden;
         transition: .3s ease;
+        background-color: #fff;
         &--active{
           opacity: 1;
           visibility: visible;
@@ -33,6 +35,9 @@
           width: 100%;
           height: 100%;
           background-color: #fff;
+          padding: 0 0 50px;
+          overflow: auto;
+          -webkit-overflow-scrolling: touch;
           .close{
             width: 36px;
             height: 36px;
@@ -69,7 +74,6 @@
           position: relative;
           width: 100%;
           height: 100%;
-          overflow: auto;
           &--left{
             width: 100%;
             height: 375px;
@@ -110,7 +114,7 @@
           &--right{
             width: 100%;
             margin: 0 0 0 auto;
-            padding: 23px 20px 40px 20px;
+            padding: 23px 20px 100px 20px;
             .ttl{
               position: relative;
               border-bottom: 5px solid #E96B00;
